# rules_java-toolchain-issue

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  downloader.cfg  java.bzl  maven_install.json
libs/fancy/: BUILD.bazel
libs/fancy/src/main/java/com/example/: Fancy.java
libs/fancy/src/test/java/com/example/: FancyTest.java
libs/runner/: BUILD.bazel
libs/runner/src/main/java/com/example/: Main.java
