#
# Fancy BUILD
#

load("@rules_java//java:defs.bzl", "java_library", "java_test")
load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "fancy",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//libs/runner:__pkg__"]
)

java_test(
    name = "FancyTest",
    srcs = ["src/test/java/com/example/FancyTest.java"],
    deps = [
        ":fancy",
        artifact("junit:junit"),
    ],
)