#
# Fancy BUILD
#

load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_jvm_external//:defs.bzl", "artifact")

java_binary(
    name = "main",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "//libs/fancy",
        artifact("org.slf4j:slf4j-api"),
    ],
    runtime_deps = [
        artifact("org.slf4j:slf4j-simple"),
    ],
    main_class = "com.example.Main",
)